--- a/app/package.json
+++ b/app/package.json
@@ -5,15 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db.json"
   },
   "dependencies": {
+    "@vue/cli-plugin-babel": "4.1.1",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "json-server": "0.16.3",
     "router": "^1.3.6",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.3"
+    "vue-api-query": "^1.9.1",
+    "vue-router": "^3.5.3",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -38,9 +44,16 @@
     },
     "rules": {}
   },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "keywords": [],
+  "description": ""
 }
